--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,6 @@ pipeline:
     image: redis
     commands:
       - env
-      - echo "Hello"
+      - echo "Hello, Hi how are you?"
     when:
       event: push
